<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/please_login_to_your_account"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/username"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_dark_blue5_15">
        <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_toStartOf="@+id/show"
        android:background="@android:color/transparent"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:maxLines="1"/>
        <ImageView
            android:id="@+id/show"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/hide_icon_148530"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/forgot_password"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/primary"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/sign_in_button"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary_15"
        android:textColor="#FFFFFF"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"/>
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:textColor="@color/primary"/>
    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>