<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up_heading"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#000000" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_a_new_account"
        android:layout_marginTop="5dp"/>
    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/full_name"
        android:maxLines="1"
        android:inputType="text"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/round_back_dark_blue5_15"
        android:hint="@string/email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_dark_blue5_15">

        <EditText
            android:id="@+id/password_regis"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/show"
            android:background="@android:color/transparent"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/show"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/hide_icon_148530"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_back_dark_blue5_15">
        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/show2"
            android:background="@android:color/transparent"
            android:hint="@string/confirm_password"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            android:maxLines="1"/>
        <ImageView
            android:id="@+id/show2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/hide_icon_148530"
            android:adjustViewBounds="true"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/sign_up_button2"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_back_primary_15"
        android:textColor="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:textColor="@color/primary"/>
    </LinearLayout>

</LinearLayout>